윈도 구조에 맞게 변경 및 의존성 문제 해결

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
   "editor.defaultFormatter": "ms-python.black-formatter",
-  "notebook.defaultFormatter": "ms-python.black-formatter"
+  "notebook.defaultFormatter": "ms-python.black-formatter",
+  "python.analysis.extraPaths": ["C:\\CodingProject\\FICC\\"],
+  "python.autoComplete.extraPaths": ["C:\\CodingProject\\FICC\\"],
+  "editor.formatOnSave": true,
+  "editor.formatOnPaste": false
 }
